--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Silva Nahuel</a>.
+    Coded by <a href="https://github.com/klonaush">Silva Nahuel</a>.
   </footer>
 
 </body>
